update to tsf2x